# crypto-course-ranvolkovich

./: .env.example  .gitignore  README.md  answers  badger_dao_attack.py  pyproject.toml
src/approval_fetcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/approvalfetcher/: app.py  main.py  main_cli.py  main_server.py
src/approvalfetcher/clients/: coingecko_client.py  rest_client.py  web3_client.py
src/approvalfetcher/dto/approval/: approval_response.py
src/approvalfetcher/model/: approval.py
src/approvalfetcher/model/dto/approval/: approval_request.py
src/approvalfetcher/routes/: approval.py  system.py
src/approvalfetcher/services/: approval_service.py  dependencies.py  price_service.py
src/approvalfetcher/utils/: cli.py  config.py  constants.py  eth_utils.py  formatters.py  logging_config.py  retry_decorator.py  throttling.py
src/approvalfetcher/utils/valdation/: eth_validtor.py
tests/: test_approval_service.py  test_models.py  test_parser.py
