[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "approval-fetcher"
version = "0.1.0"
description = "ERC-20 Token Approval Event Fetcher"
requires-python = ">=3.11"
dependencies = [
    "web3[async]>=7.6.0",
    "aiohttp>=3.10.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
approval-fetcher = "approvalfetcher.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]